fix image overflow/size prob desquash

--- a/css/theme.css
+++ b/css/theme.css
@@ -90,12 +90,16 @@ body {
     color: #1C1C1C;
 }
 
-.prev-img {
+.prev-img-container {
     display: block;
     margin-right: auto;
     margin-left: auto;
     max-height: 4in;
     overflow: hidden;
+}
+
+.prev-img {
+    width: 100%;
 }
 
 .post-image {
